# seraph

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
abi/init-protocol/: Cargo.toml  README.md
abi/init-protocol/src/: lib.rs
abi/process-abi/: Cargo.toml  README.md
abi/process-abi/src/: lib.rs
abi/syscall/: Cargo.toml  README.md
abi/syscall/src/: lib.rs
base/usertest/: Cargo.toml
base/usertest/src/: bootstrap.rs  main.rs  reentry.rs
base/usertest/src/ipc_util/: fs.rs  mod.rs  ns.rs
base/usertest/src/phases/: fs_ipc.rs  fs_std.rs  namespace.rs  pipes.rs  process_faults.rs  procmgr.rs  pwrmgr.rs  shmem.rs  startup.rs
core/kernel/: Cargo.toml  README.md  build.rs
core/kernel/docs/: arch-interface.md  capability-internals.md  cross-boundary-disclosure.md  entropy.md  initialization.md  ipc-internals.md  memory-internals.md  sched-ipc-redesign.md  scheduler.md  scheduling-internals.md  syscalls.md  thread-lifecycle-and-sleep.md
core/kernel/linker/: riscv64.ld  x86_64.ld
core/kernel/src/: console.rs  cpu_mask.rs  framebuffer.rs  irq.rs  main.rs  percpu.rs  platform.rs  sync.rs  uaccess.rs  validate.rs
core/kernel/src/cap/: cspace.rs  derivation.rs  mod.rs  object.rs  retype.rs  slot.rs  split.rs
core/kernel/src/entropy/: cpurng.rs  health.rs  jitter.rs  keccak.rs  mod.rs  pool.rs  reseed_policy.rs  selftest.rs  sponge.rs  vmgenid.rs
core/kernel/src/ipc/: endpoint.rs  event_queue.rs  fault.rs  message.rs  mod.rs  notification.rs  signal.rs  wait_set.rs
core/kernel/src/mm/: address_space.rs  buddy.rs  heap.rs  init.rs  init_reloc.rs  kernel_pt_pool.rs  mod.rs  paging.rs  size_class.rs  slab.rs  tag_allocator.rs  tlb_shootdown.rs
core/kernel/src/sched/: mod.rs  run_queue.rs  thread.rs  thread_registry.rs
core/kernel/src/syscall/: cap.rs  entropy.rs  hw.rs  ipc.rs  mem.rs  mod.rs  sbi.rs  sysinfo.rs  thread.rs
core/ktest/: Cargo.toml  README.md
core/ktest/src/: acpi_shutdown.rs  cmdline.rs  frame_pool.rs  framebuffer.rs  ioport.rs  main.rs  serial.rs  spawn.rs
core/ktest/src/bench/: cap.rs  event.rs  ipc.rs  mm.rs  mod.rs  notification.rs  null.rs  signal.rs  thread.rs  tlb.rs  wait_set.rs
core/ktest/src/integration/: aspace_fault_notification_late_bind.rs  cap_delegation_chain.rs  cap_generation_stale_handle.rs  cap_move_into_fresh_cspace_then_ipc.rs  cap_transfer.rs  cross_cspace_revoke_no_alias.rs  death_notification_late_bind.rs  fault_exception_no_handler_kills.rs  fault_exception_redirect.rs  fault_handler_declines_kills.rs  fault_kills_thread.rs  fault_pager_roundtrip.rs  fault_resume_modifies_pc.rs  fpu_survives_ipc_call.rs  ipc_call_interrupted_stop_start.rs  irq_preserves_user_regs.rs  memory_lifecycle.rs  mod.rs  multi_caller_ipc_fifo.rs  park_interrupted_stop_start.rs  priority_preemption.rs  retype_reclaim.rs  retype_subpage_clobber.rs  sbi_gating.rs  shared_frame_two_aspaces.rs  shared_memory_two_aspaces.rs  thread_lifecycle.rs  tlb_coherency.rs  tlb_widen_retry.rs  wait_concurrency.rs
core/ktest/src/stress/: cap_delete_reply_wake.rs  cap_delete_running.rs  (+20 more)
devmgr/: Cargo.toml  README.md
devmgr/src/: caps.rs  main.rs  pci.rs  spawn.rs
devmgr/src/firmware/: acpi.rs  mod.rs
ktest/: Cargo.toml
ktest/src/: main.rs
ktest/src/integration/: cap_transfer.rs  mod.rs
ktest/src/stress/: concurrent_ipc.rs  idle_wake_race.rs  mod.rs
ktest/src/unit/: mm.rs  mod.rs  sysinfo.rs
procmgr/: Cargo.toml  README.md
procmgr/src/: loader.rs  main.rs  process.rs
programs/shell/: Cargo.toml  README.md
programs/shell/path/: Cargo.toml
programs/shell/src/: main.rs
programs/shell/tester/: Cargo.toml
programs/terminal/: Cargo.toml  README.md
programs/terminal/src/: input.rs  main.rs  output.rs
programs/threadchurn/: Cargo.toml
programs/threadchurn/src/: main.rs
programs/threadchurn/tester/: Cargo.toml
services/devmgr/: Cargo.toml  README.md
services/devmgr/docs/: hotplug.md  pci-enumeration.md
services/devmgr/src/: caps.rs  main.rs  pci.rs  spawn.rs
services/init/: Cargo.toml  README.md
services/init/docs/: bootstrap.md
services/init/src/: bootstrap.rs  logging.rs  main.rs  mount.rs  service.rs  vfs.rs  walk.rs
services/logd/: Cargo.toml  README.md
services/logd/docs/: handover-protocol.md  ipc-interface.md
services/logd/src/: handover.rs  main.rs  slot.rs
services/memmgr/: Cargo.toml  README.md
services/memmgr/docs/: frame-pool.md  ipc-interface.md  memory-pool.md
services/memmgr/free-pool/: Cargo.toml
services/memmgr/src/: main.rs
services/procmgr/: Cargo.toml  README.md
services/procmgr/docs/: frame-management.md  ipc-interface.md
services/procmgr/process-table/: Cargo.toml
services/procmgr/src/: frames.rs  init_reap.rs  loader.rs  main.rs  process.rs
services/pwrmgr/: Cargo.toml  README.md
services/pwrmgr/src/: caps.rs  main.rs  riscv64.rs  x86_64.rs
services/svcmgr/: Cargo.toml  README.md
services/svcmgr/docs/: ipc-interface.md  restart-protocol.md  service-definitions.md
services/svcmgr/src/: main.rs  restart.rs  service.rs
services/svcmgr/svc-defs/: Cargo.toml
services/svctest/: Cargo.toml
services/svctest/src/: bootstrap.rs  main.rs  reentry.rs  runner.rs
services/timed/: Cargo.toml  README.md
services/timed/src/: main.rs
services/vfsd/: Cargo.toml  README.md
services/vfsd/docs/: namespace-composition.md  vfs-ipc-interface.md
services/vfsd/gpt/: Cargo.toml
services/vfsd/src/: driver.rs  gpt.rs  main.rs  mount_conf.rs  partition.rs  role_guids.rs  root_backend.rs  worker.rs  worker_pool.rs
shared/crypto/: Cargo.toml  README.md
shared/crypto/src/: ed25519.rs  edwards.rs  field.rs  lib.rs  scalar.rs  sha512.rs
shared/ipc/: Cargo.toml
shared/ipc/src/: bootstrap.rs  lib.rs  recv_guard.rs
shared/log/: Cargo.toml
shared/log/src/: lib.rs
shared/namespace-protocol/: Cargo.toml  README.md
shared/namespace-protocol/src/: badge.rs  gate.rs  lib.rs  name.rs  rights.rs  wire.rs
shared/ns-client/: Cargo.toml
shared/ns-client/src/: lib.rs
shared/registry/: Cargo.toml
shared/registry-client/: Cargo.toml
shared/registry-client/src/: lib.rs
(+493 files in other folders)
