[workspace]
resolver = "2"
members = [
    "core/kernel",
    "core/boot",
    "core/ktest",
    "services/init",
    "services/memmgr",
    "services/procmgr",
    "services/svcmgr",
    "services/devmgr",
    "services/logd",
    "services/pwrmgr",
    "services/timed",
    "services/vfsd",
    "services/drivers/cmos",
    "services/drivers/goldfish-rtc",
    "services/drivers/virtio/core",
    "services/drivers/virtio/blk",
    "services/fs/fat",
    "abi/boot-protocol",
    "abi/init-protocol",
    "abi/process-abi",
    "abi/syscall",
    "shared/elf",
    "shared/font",
    "shared/mmio",
    "shared/namespace-protocol",
    "shared/syscall",
    "shared/ipc",
    "shared/log",
    "shared/registry",
    "shared/shmem",
    "base/crasher",
    "base/fsbench",
    "base/hello",
    "base/pipefault",
    "base/stackoverflow",
    "base/stdiotest",
    "base/usertest",
    "xtask",
]

# default-members limits bare `cargo build`/`cargo run` to xtask only.
# Components targeting custom/embedded targets are built via build.sh.
default-members = ["xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false


[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

undocumented_unsafe_blocks       = "warn"
cast_ptr_alignment               = "warn"
unwrap_used                      = "deny"
expect_used                      = "deny"

[workspace.dependencies]
boot-protocol = { path = "abi/boot-protocol" }
init-protocol = { path = "abi/init-protocol" }
process-abi = { path = "abi/process-abi" }
font = { path = "shared/font" }
mmio = { path = "shared/mmio" }
syscall = { path = "abi/syscall", package = "syscall-abi" }
syscall-abi = { path = "abi/syscall" }
virtio-core = { path = "services/drivers/virtio/core" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
