[workspace]
resolver = "2"
members = [
    "core/kernel",
    "core/boot",
    "core/ktest",
    "services/init",
    "services/memmgr",
    "services/memmgr/free-pool",
    "services/procmgr",
    "services/procmgr/process-table",
    "services/svcmgr",
    "services/svctest",
    "services/usertest",
    "services/crasher",
    "services/devmgr",
    "services/logd",
    "services/pwrmgr",
    "services/timed",
    "services/vfsd",
    "services/vfsd/gpt",
    "services/drivers/cmos",
    "services/drivers/framebuffer",
    "services/drivers/goldfish-rtc",
    "services/drivers/serial",
    "services/drivers/test-orphan",
    "services/drivers/virtio/core",
    "services/drivers/virtio/blk",
    "services/drivers/virtio/input",
    "services/fs/fat",
    "services/fs/fat/fat-parse",
    "abi/boot-protocol",
    "abi/init-protocol",
    "abi/process-abi",
    "abi/syscall",
    "shared/ansi",
    "shared/crypto",
    "shared/elf",
    "shared/font",
    "shared/mmio",
    "shared/namespace-protocol",
    "shared/process-layout",
    "shared/syscall",
    "shared/ipc",
    "shared/log",
    "shared/ns-client",
    "shared/registry",
    "shared/registry-client",
    "shared/shmem",
    "shared/text",
    "programs/demandpaged",
    "programs/capexhaust",
    "programs/fb-charset",
    "programs/fsbench",
    "programs/hello",
    "programs/hello/tester",
    "programs/pipefault",
    "programs/pipestress",
    "programs/pipestress/tester",
    "programs/shell",
    "programs/shell/path",
    "programs/shell/tester",
    "programs/stackoverflow",
    "programs/stdiotest",
    "programs/stdiotest/tester",
    "programs/terminal",
    "programs/threadchurn",
    "programs/threadchurn/tester",
    "programs/threadstack",
    "programs/threadstack/tester",
    "runtime/ruststd/argv-env",
    "xtask",
    "xtask/wrapper-shim",
]

# default-members limits bare `cargo build`/`cargo run` to xtask only.
# Components targeting custom/embedded targets are built via build.sh.
default-members = ["xtask"]

[workspace.package]
version = "0.1.1"
edition = "2024"
publish = false


[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

undocumented_unsafe_blocks       = "warn"
cast_ptr_alignment               = "warn"
unwrap_used                      = "deny"
expect_used                      = "deny"

[workspace.dependencies]
ansi = { path = "shared/ansi" }
boot-protocol = { path = "abi/boot-protocol" }
init-protocol = { path = "abi/init-protocol" }
process-abi = { path = "abi/process-abi" }
process-layout = { path = "shared/process-layout" }
font = { path = "shared/font" }
mmio = { path = "shared/mmio" }
text = { path = "shared/text" }
syscall = { path = "abi/syscall", package = "syscall-abi" }
syscall-abi = { path = "abi/syscall" }
virtio-core = { path = "services/drivers/virtio/core" }

# opt-level = 2 and debug = 0 are unified across both profiles; debuginfo is
# opt-in per-package via `cargo xtask build --debug <comp>`. dev and release
# differ only in {debug-assertions, overflow-checks} (iterate) and
# {lto, codegen-units} (ship). LTO has no per-package form, so two profiles
# must persist.
[profile.dev]
panic = "abort"
opt-level = 2
debug = 0
debug-assertions = true
overflow-checks = true

[profile.release]
panic = "abort"
opt-level = 2
debug = 0
lto = true
codegen-units = 1
