
[package]
name = "ktest"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ktest"
path = "src/main.rs"
test = false

[dependencies]
font          = { workspace = true }
init-protocol = { path = "../abi/init-protocol" }
ipc           = { path = "../shared/ipc" }
syscall       = { path = "../shared/syscall" }
syscall-abi   = { path = "../abi/syscall" }

[lints]
workspace = true
