[package]
name = "init-protocol"
version.workspace = true
edition.workspace = true
publish.workspace = true

# no_std: this crate defines the kernel-to-init handover ABI and must be
# usable in both kernel (no_std) and userspace (no_std) contexts.
[lib]
doctest = false

[dependencies]

[lints]
workspace = true
