[package]
name = "usertest"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "usertest"
path = "src/main.rs"
test = false

[dependencies]
ipc = { path = "../../shared/ipc" }
namespace-protocol = { path = "../../shared/namespace-protocol" }
syscall = { path = "../../shared/syscall" }
shmem = { path = "../../shared/shmem" }

[lints]
workspace = true
