[package]
name = "usertest"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "usertest"
path = "src/main.rs"
test = false

[dependencies]
ipc = { path = "../../shared/ipc" }
namespace-protocol = { path = "../../shared/namespace-protocol" }
syscall = { path = "../../shared/syscall" }
shmem = { path = "../../shared/shmem" }

[lints]
workspace = true
