[package]
name = "kernel"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
boot-protocol = { workspace = true }
init-protocol = { workspace = true }
font = { workspace = true }
mmio = { workspace = true }
syscall = { workspace = true }

[[bin]]
name = "kernel"
path = "src/main.rs"

[lints]
workspace = true
