
[package]
name = "ktest"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "ktest"
path = "src/main.rs"
test = false

[dependencies]
font          = { workspace = true }
init-protocol = { path = "../../abi/init-protocol" }
ipc           = { path = "../../shared/ipc" }
syscall       = { path = "../../shared/syscall" }
syscall-abi   = { path = "../../abi/syscall" }

[lints]
workspace = true
