
[package]
name = "ktest"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "ktest"
path = "src/main.rs"
test = false

[dependencies]
crypto         = { path = "../../shared/crypto" }
font           = { workspace = true }
init-protocol  = { path = "../../abi/init-protocol" }
ipc            = { path = "../../shared/ipc" }
process-layout = { workspace = true }
syscall        = { path = "../../shared/syscall" }
syscall-abi    = { path = "../../abi/syscall" }
text           = { workspace = true }

[lints]
workspace = true
