[package]
name = "shell"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "shell"
path = "src/main.rs"
test = false

[dependencies]
# Pure lexical path resolver, extracted so its logic is host-testable.
shell-path = { path = "path" }

[lints]
workspace = true
