[package]
name = "shell"
# Independent version: distinct, non-core user-facing program (docs/conventions.md
# §Versioning). The system boots without it; it could one day be optional or replaced.
version = "0.0.1"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "shell"
path = "src/main.rs"
test = false

[dependencies]
# Pure lexical path resolver, extracted so its logic is host-testable.
shell-path = { path = "path" }

[lints]
workspace = true
