[package]
name = "terminal"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "terminal"
path = "src/main.rs"
test = false

[dependencies]
ansi = { workspace = true }
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }

[lints]
workspace = true
