[package]
name = "terminal"
# Independent version: distinct, non-core user-facing program (docs/conventions.md
# §Versioning). The system boots without it; it could one day be optional or replaced.
version = "0.0.1"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "terminal"
path = "src/main.rs"
test = false

[dependencies]
ansi = { workspace = true }
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }

[lints]
workspace = true
