[package]
name = "threadchurn"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "threadchurn"
path = "src/main.rs"
test = false

[dependencies]
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
