[package]
name = "devmgr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "devmgr"
path = "src/main.rs"
test = false

[dependencies]
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }
virtio-core = { path = "../drivers/virtio/core" }

[lints]
workspace = true
