[package]
name = "init"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "init"
path = "src/main.rs"
test = false

[dependencies]
init-protocol = { path = "../../abi/init-protocol" }
process-abi = { path = "../../abi/process-abi" }
elf = { path = "../../shared/elf" }
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
