[package]
name = "memmgr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "memmgr"
path = "src/main.rs"
test = false

[dependencies]
process-abi = { path = "../../abi/process-abi" }
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
