[package]
name = "memmgr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "memmgr"
path = "src/main.rs"
test = false

[dependencies]
# Pure free-pool allocator + region-interval logic, extracted so it is
# host-testable; the bin injects memory_merge/memory_split as closures.
free_pool = { path = "free-pool", package = "memmgr-free-pool" }
process-abi = { path = "../../abi/process-abi" }
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
