[package]
name = "procmgr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "procmgr"
path = "src/main.rs"
test = false

[dependencies]
# Pure process-table + badge logic, extracted so it is host-testable.
process_table = { path = "process-table", package = "procmgr-process-table" }
process-abi = { path = "../../abi/process-abi" }
elf = { path = "../../shared/elf" }
ipc = { path = "../../shared/ipc" }
namespace-protocol = { path = "../../shared/namespace-protocol" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
