[package]
name = "pwrmgr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "pwrmgr"
path = "src/main.rs"
test = false

[dependencies]
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
