[package]
name = "svcmgr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "svcmgr"
path = "src/main.rs"
test = false

[dependencies]
ipc = { path = "../../shared/ipc" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }
registry = { path = "../../shared/registry" }

[lints]
workspace = true
