[package]
name = "svcmgr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "svcmgr"
path = "src/main.rs"
test = false

[dependencies]
ipc = { path = "../../shared/ipc" }
svcmgr-defs = { path = "svc-defs" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }
registry = { path = "../../shared/registry" }
namespace-protocol = { path = "../../shared/namespace-protocol" }

[lints]
workspace = true
