[package]
name = "svctest"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "svctest"
path = "src/main.rs"
test = false

[dependencies]
ipc = { path = "../../shared/ipc" }
namespace-protocol = { path = "../../shared/namespace-protocol" }
process-layout = { path = "../../shared/process-layout" }
syscall = { path = "../../shared/syscall" }
shmem = { path = "../../shared/shmem" }

[lints]
workspace = true
