[package]
name = "vfsd"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "vfsd"
path = "src/main.rs"
test = false

[dependencies]
# Seraph-minted GPT partition type GUIDs (per-arch root and EFI ESP);
# vfsd compares GPT entries against these to identify the rootfs.
boot-protocol = { path = "../../abi/boot-protocol" }
ipc = { path = "../../shared/ipc" }
namespace-protocol = { path = "../../shared/namespace-protocol" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
