[package]
name = "vfsd"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "vfsd"
path = "src/main.rs"
test = false

[dependencies]
# Seraph-minted GPT partition type GUIDs (per-arch root and EFI ESP);
# vfsd compares GPT entries against these to identify the rootfs.
boot-protocol = { path = "../../abi/boot-protocol" }
# Pure GPT-format parser; vfsd wraps it with block-device I/O in partition.rs.
# Package is `vfsd-gpt` (the bare `gpt` name is the crates.io crate xtask uses);
# the `gpt` dependency key keeps the in-crate path short.
gpt = { path = "gpt", package = "vfsd-gpt" }
ipc = { path = "../../shared/ipc" }
namespace-protocol = { path = "../../shared/namespace-protocol" }
syscall = { path = "../../shared/syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
