[package]
name = "ipc"
version = "0.1.0"
edition = "2024"
publish = false

# no_std: shared IPC helpers for bare-metal userspace services.
[lib]
test = false
doctest = false

[dependencies]
syscall = { path = "../syscall" }
syscall-abi = { path = "../../abi/syscall" }
# When std lists this crate as a dep, build-std activates
# `rustc-dep-of-std` and forwards the feature to our workspace deps, so
# `use core::…` resolves against the build-std core facade. Same pattern
# as abi/syscall and shared/syscall.
rustc-std-workspace-core = { version = "1.0.1", optional = true }

[features]
rustc-dep-of-std = [
    "rustc-std-workspace-core",
    "syscall/rustc-dep-of-std",
    "syscall-abi/rustc-dep-of-std",
]

[lints]
workspace = true
