[package]
name = "registry-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

# no_std: helper for looking up service caps by name in the per-process
# svcmgr registry. Used by std-built services (timed, ruststd) and
# directly by no_std consumers via the same API. Mirrors the
# `shared/log` cap-install pattern: cache the per-process registry cap
# once, then expose `lookup(name, ipc_buf)`.
[lib]
test = false
doctest = false

[dependencies]
ipc = { path = "../ipc" }
syscall = { path = "../syscall" }
syscall-abi = { path = "../../abi/syscall" }
# When std lists this crate as a dep, build-std activates
# `rustc-dep-of-std` and forwards the feature to our workspace deps.
# Same pattern as shared/log, shared/ipc.
rustc-std-workspace-core = { version = "1.0.1", optional = true }

[features]
rustc-dep-of-std = [
    "rustc-std-workspace-core",
    "ipc/rustc-dep-of-std",
    "syscall/rustc-dep-of-std",
    "syscall-abi/rustc-dep-of-std",
]

[lints]
workspace = true
